Make sure form select has a decent overflow

--- a/assets/scss/components/_bootstrap-components.scss
+++ b/assets/scss/components/_bootstrap-components.scss
@@ -21,6 +21,10 @@
   padding-top: .4375rem;
   padding-bottom: .4375rem;
   padding-left: .75rem;
+  /* clip long option labels with … instead of a hard cut against the caret */
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .form-control:focus,
 .form-select:focus {
